<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textViewCountDown"
        android:layout_width="wrap_content"
        android:layout_height="133dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="437dp"
        android:text="@string/init_countdown"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="60sp" />

    <Button
        android:id="@+id/startPauseBtn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="365dp"
        android:text="@string/start_btn"
        android:textSize="20dp" />

    <Button
        android:id="@+id/resetBtn"
        style="?android:borderlessButtonStyle"
        android:layout_width="123dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="187dp"
        android:text="@string/reset_btn"
        android:textColor="@color/purple_500"
        android:textSize="15dp"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>